--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NEXT_PUBLIC_APP_URL=http://localhost:3000
 # DATABASE - Neon Postgres (neon.tech)
 DATABASE_URL=
 
-# AUTH - These come from clerk (https://link.joshtriedcoding.com/clerk)
+# AUTH -  clerk (clerk.com)
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
 CLERK_SECRET_KEY=
 
